[build-system]
requires = ["setuptools>=78.1.1"]
build-backend = "setuptools.build_meta"
[project]
name = "docassemble.base"
version = '1.7.7'
description = "The base components of the docassemble system."
readme = "README.md"
authors = [
  {name = "Jonathan Pyle", email = "jhpyle@gmail.com"}
]
license = "MIT"
license-files = ["LICENSE.txt"]
requires-python = ">= 3.9"
dependencies = [
    "3to2==1.1.1",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.11.16",
    "aiohttp-retry==2.9.1",
    "aiosignal==1.3.2",
    "alembic==1.15.2",
    "anyio==4.9.0",
    "astunparse==1.6.3",
    "async-timeout==5.0.1",
    "atomicwrites==1.4.1",
    "attrs==25.3.0",
    "azure-common==1.1.28",
    "azure-core==1.33.0",
    "azure-identity==1.21.0",
    "azure-keyvault-secrets==4.9.0",
    "azure-nspkg==3.0.2",
    "azure-storage-blob==12.25.1",
    "babel==2.17.0",
    "backports.tarfile==1.2.0",
    "bcrypt==4.3.0",
    "beautifulsoup4==4.13.3",
    "bleach==6.2.0",
    "blinker==1.9.0",
    "boto==2.49.0",
    "boto3==1.37.28",
    "botocore==1.37.28",
    "cachetools==5.5.2",
    "cairocffi==1.7.1",
    "CairoSVG==2.7.1",
    "certifi==2025.1.31",
    "cffi==1.17.1",
    "chardet==5.2.0",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "colorama==0.4.6",
    "commonmark==0.9.1",
    "convertapi==2.0.0",
    "cryptography==43.0.3",
    "cssselect2==0.8.0",
    "defusedxml==0.7.1",
    "Deprecated==1.2.18",
    "deprecation==2.1.0",
    "docassemble-backports==1.0",
    "Docassemble-Pattern==3.6.7",
    "docassemble-textstat==0.7.2",
    "docopt==0.6.2",
    "docutils==0.21.2",
    "docxcompose==1.4.0",
    "docxtpl==0.19.1",
    "et_xmlfile==2.0.0",
    "exceptiongroup==1.2.2",
    "Flask==3.1.1",
    "Flask-Mail==0.10.0",
    "frozenlist==1.5.0",
    "future==1.0.0",
    "geographiclib==2.0",
    "geopy==2.4.1",
    "google-api-core==2.24.2",
    "google-api-python-client==2.166.0",
    "google-auth==2.17.0",
    "google-auth-httplib2==0.2.0",
    "google-auth-oauthlib==1.2.1",
    "google-cloud-core==2.4.3",
    "google-cloud-storage==2.11.0",
    "google-cloud-vision==3.10.1",
    "google-crc32c==1.7.1",
    "google-i18n-address==3.1.1",
    "google-resumable-media==2.7.2",
    "googleapis-common-protos==1.69.2",
    "greenlet==3.1.1",
    "grpcio==1.71.0",
    "grpcio-status==1.71.0",
    "guess_language-spirit==0.5.3",
    "httplib2==0.22.0",
    "Hyphenate==1.1.0",
    "id==1.5.0",
    "idna==3.10",
    "img2pdf==0.6.0",
    "importlib_metadata==8.6.1",
    "importlib_resources==6.5.2",
    "iniconfig==2.1.0",
    "isodate==0.7.2",
    "itsdangerous==2.2.0",
    "jaraco.classes==3.4.0",
    "jaraco.context==6.0.1",
    "jaraco.functools==4.1.0",
    "jdcal==1.4.1",
    "jeepney==0.9.0",
    "jellyfish==1.2.0",
    "Jinja2==3.1.6",
    "jmespath==1.0.1",
    "joblib==1.4.2",
    "keyring==25.6.0",
    "lxml==5.3.2",
    "Mako==1.3.9",
    "Markdown==3.7",
    "markdown-it-py==3.0.0",
    "MarkupSafe==3.0.2",
    "mdurl==0.1.2",
    "more-itertools==10.6.0",
    "msal==1.32.0",
    "msal-extensions==1.3.1",
    "msrest==0.7.1",
    "multidict==6.3.2",
    "namedentities==1.9.4",
    "nh3==0.2.21",
    "nltk==3.9.1",
    "num2words==0.5.14",
    "numpy==2.2.4",
    "oauth2client==4.1.3",
    "oauthlib==3.2.2",
    "openpyxl==3.1.5",
    "ordered-set==4.1.0",
    "packaging==24.2",
    "pandas==2.2.3",
    "passlib==1.7.4",
    "pdfminer.six==20250327",
    "phonenumbers==9.0.2",
    "pikepdf==9.6.0",
    "pillow==11.1.0",
    "pkginfo==1.12.1.2",
    "pluggy==1.5.0",
    "ply==3.11",
    "portalocker==3.1.1",
    "propcache==0.3.1",
    "proto-plus==1.26.1",
    "protobuf==5.29.4",
    "pyasn1==0.6.1",
    "pyasn1_modules==0.4.2",
    "pycountry==24.6.1",
    "pycparser==2.22",
    "pycryptodome==3.22.0",
    "pycryptodomex==3.22.0",
    "Pygments==2.19.1",
    "PyJWT==2.10.1",
    "PyLaTeX==1.4.2",
    "pyparsing==3.2.3",
    "pypng==0.20220715.0",
    "pytest==8.3.5",
    "python-dateutil==2.9.0.post0",
    "python-docx==1.1.2",
    "python-editor==1.0.4",
    "pytz==2025.2",
    "pytz-deprecation-shim==0.1.0.post0",
    "PyYAML==6.0.2",
    "pyzbar==0.1.9",
    "qrcode==8.1",
    "readme_renderer==44.0",
    "regex==2024.11.6",
    "reportlab==4.3.1",
    "repoze.lru==0.7",
    "requests==2.32.3",
    "requests-oauthlib==2.0.0",
    "requests-toolbelt==1.0.0",
    "rfc3986==2.0.0",
    "rich==14.0.0",
    "rsa==4.7.2",
    "ruamel.yaml==0.18.10",
    "ruamel.yaml.bytes==0.1.0",
    "ruamel.yaml.clib==0.2.12",
    "ruamel.yaml.string==0.1.1",
    "s3transfer==0.11.4",
    "scipy==1.15.2",
    "SecretStorage==3.3.3",
    "setuptools==78.1.1",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sortedcontainers==2.4.0",
    "soupsieve==2.6",
    "SQLAlchemy==2.0.40",
    "tinycss2==1.4.0",
    "titlecase==2.4.1",
    "toml==0.10.2",
    "tomli==2.2.1",
    "tqdm==4.67.1",
    "twilio==9.5.1",
    "twine==6.1.0",
    "typing_extensions==4.13.1",
    "tzdata==2025.2",
    "tzlocal==5.3.1",
    "ua-parser==1.0.1",
    "ua-parser-builtins==0.18.0.post1",
    "uritemplate==4.1.1",
    "urllib3==2.3.0",
    "us==3.2.0",
    "user-agents==2.2.0",
    "wcwidth==0.2.13",
    "webencodings==0.5.1",
    "Werkzeug==3.1.3",
    "wrapt==1.17.2",
    "xfdfgen==0.4",
    "xlrd==2.0.1",
    "XlsxWriter==3.2.2",
    "xlwt==1.3.0",
    "yarl==1.18.3",
    "zipp==3.21.0",
]
[tool.setuptools.packages.find]
where = ["."]
[project.urls]
Homepage = "https://docassemble.org"
Documentation = "https://docassemble.org/docs.html"
Repository = "https://github.com/jhpyle/docassemble.git"
"Bug Tracker" = "https://github.com/jhpyle/docassemble/issues"
Changelog = "https://github.com/jhpyle/docassemble/blob/master/CHANGELOG.md"
