[build-system]
requires = ["setuptools>=80.9.0"]
build-backend = "setuptools.build_meta"
[project]
name = "docassemble.base"
version = '1.8.6'
description = "The base components of the docassemble system."
readme = "README.md"
authors = [
  {name = "Jonathan Pyle", email = "jhpyle@gmail.com"}
]
license = "MIT"
license-files = ["LICENSE.txt"]
requires-python = ">= 3.9"
dependencies = [
  "3to2==1.1.1",
  "aiohappyeyeballs==2.6.1",
  "aiohttp==3.12.15",
  "aiohttp-retry==2.9.1",
  "aiosignal==1.4.0",
  "alembic==1.16.4",
  "anyio==4.9.0",
  "astunparse==1.6.3",
  "async-timeout==5.0.1",
  "atomicwrites==1.4.1",
  "attrs==25.3.0",
  "azure-common==1.1.28",
  "azure-core==1.35.0",
  "azure-identity==1.23.1",
  "azure-keyvault-secrets==4.10.0",
  "azure-nspkg==3.0.2",
  "azure-storage-blob==12.26.0",
  "babel==2.17.0",
  "backports.tarfile==1.2.0",
  "bcrypt==4.3.0",
  "beautifulsoup4==4.13.4",
  "bleach==6.2.0",
  "blinker==1.9.0",
  "boto==2.49.0",
  "boto3==1.40.1",
  "botocore==1.40.1",
  "cachetools==5.5.2",
  "cairocffi==1.7.1",
  "CairoSVG==2.8.2",
  "certifi==2025.8.3",
  "cffi==1.17.1",
  "chardet==5.2.0",
  "charset-normalizer==3.4.2",
  "click==8.2.1",
  "colorama==0.4.6",
  "commonmark==0.9.1",
  "convertapi==2.0.0",
  "cryptography==45.0.5",
  "cssselect2==0.8.0",
  "defusedxml==0.7.1",
  "Deprecated==1.2.18",
  "deprecation==2.1.0",
  "docassemble-backports==1.0",
  "Docassemble-Pattern==3.6.7",
  "docassemble-textstat==0.7.2",
  "docopt==0.6.2",
  "docutils==0.22",
  "docxcompose==1.4.0",
  "docxtpl==0.20.1",
  "et_xmlfile==2.0.0",
  "exceptiongroup==1.3.0",
  "Flask==3.1.1",
  "Flask-Mail==0.10.0",
  "frozenlist==1.7.0",
  "future==1.0.0",
  "geographiclib==2.0",
  "geopy==2.4.1",
  "google-api-core==2.25.1",
  "google-api-python-client==2.177.0",
  "google-auth==2.39.0",
  "google-auth-httplib2==0.2.0",
  "google-auth-oauthlib==1.2.2",
  "google-cloud-core==2.4.3",
  "google-cloud-storage==3.2.0",
  "google-cloud-vision==3.10.2",
  "google-crc32c==1.7.1",
  "google-i18n-address==3.1.1",
  "google-resumable-media==2.7.2",
  "googleapis-common-protos==1.70.0",
  "greenlet==3.2.3",
  "grpcio==1.74.0",
  "grpcio-status==1.74.0",
  "guess_language-spirit==0.5.3",
  "httplib2==0.22.0",
  "Hyphenate==1.1.0",
  "id==1.5.0",
  "idna==3.10",
  "img2pdf==0.6.1",
  "importlib_metadata==8.7.0",
  "importlib_resources==6.5.2",
  "iniconfig==2.1.0",
  "isodate==0.7.2",
  "itsdangerous==2.2.0",
  "jaraco.classes==3.4.0",
  "jaraco.context==6.0.1",
  "jaraco.functools==4.2.1",
  "jdcal==1.4.1",
  "jeepney==0.9.0",
  "jellyfish==1.2.0",
  "Jinja2==3.1.6",
  "jmespath==1.0.1",
  "joblib==1.5.1",
  "keyring==25.6.0",
  "lxml==6.0.0",
  "Mako==1.3.10",
  "Markdown==3.8.2",
  "markdown-it-py==3.0.0",
  "MarkupSafe==3.0.2",
  "mdurl==0.1.2",
  "more-itertools==10.7.0",
  "msal==1.33.0",
  "msal-extensions==1.3.1",
  "msrest==0.7.1",
  "multidict==6.6.3",
  "namedentities==1.9.4",
  "nh3==0.3.0",
  "nltk==3.9.1",
  "num2words==0.5.14",
  "numpy==2.2.6",
  "oauth2client==4.1.3",
  "oauthlib==3.3.1",
  "openpyxl==3.1.5",
  "ordered-set==4.1.0",
  "packaging==25.0",
  "pandas==2.3.1",
  "passlib==1.7.4",
  "pdfminer.six==20250506",
  "phonenumbers==9.0.10",
  "pikepdf==9.10.2",
  "pillow==11.3.0",
  "pkginfo==1.12.1.2",
  "pluggy==1.6.0",
  "ply==3.11",
  "portalocker==3.2.0",
  "propcache==0.3.2",
  "proto-plus==1.26.1",
  "protobuf==6.31.1",
  "pyasn1==0.6.1",
  "pyasn1_modules==0.4.2",
  "pycountry==24.6.1",
  "pycparser==2.22",
  "pycryptodome==3.23.0",
  "pycryptodomex==3.23.0",
  "Pygments==2.19.2",
  "PyJWT==2.10.1",
  "PyLaTeX==1.4.2",
  "pyparsing==3.2.3",
  "pypng==0.20220715.0",
  "pytest==8.4.1",
  "python-dateutil==2.9.0.post0",
  "python-docx==1.2.0",
  "python-editor==1.0.4",
  "pytz==2025.2",
  "pytz-deprecation-shim==0.1.0.post0",
  "PyYAML==6.0.2",
  "pyzbar==0.1.9",
  "qrcode==8.2",
  "readme_renderer==44.0",
  "regex==2025.7.34",
  "reportlab==4.4.3",
  "repoze.lru==0.7",
  "requests==2.32.4",
  "requests-oauthlib==2.0.0",
  "requests-toolbelt==1.0.0",
  "rfc3986==2.0.0",
  "rich==14.1.0",
  "rsa==4.7.2",
  "ruamel.yaml==0.18.14",
  "ruamel.yaml.bytes==0.1.0",
  "ruamel.yaml.clib==0.2.12",
  "ruamel.yaml.string==0.1.1",
  "s3transfer==0.13.1",
  "scipy==1.15.3",
  "SecretStorage==3.3.3",
  "setuptools==80.9.0",
  "six==1.17.0",
  "sniffio==1.3.1",
  "sortedcontainers==2.4.0",
  "soupsieve==2.7",
  "SQLAlchemy==2.0.42",
  "tinycss2==1.4.0",
  "titlecase==2.4.1",
  "toml==0.10.2",
  "tomli==2.2.1",
  "tqdm==4.67.1",
  "twilio==9.7.0",
  "twine==6.1.0",
  "typing_extensions==4.14.1",
  "tzdata==2025.2",
  "tzlocal==5.3.1",
  "ua-parser==1.0.1",
  "ua-parser-builtins==0.18.0.post1",
  "uritemplate==4.2.0",
  "urllib3==2.5.0",
  "us==3.2.0",
  "user-agents==2.2.0",
  "wcwidth==0.2.13",
  "webencodings==0.5.1",
  "Werkzeug==3.1.3",
  "wheel==0.45.1",
  "wrapt==1.17.2",
  "xfdfgen==0.4",
  "xlrd==2.0.2",
  "xlsxwriter==3.2.5",
  "xlwt==1.3.0",
  "yarl==1.20.1",
  "zipp==3.23.0",
]
[tool.setuptools.packages.find]
where = ["."]
[project.urls]
Homepage = "https://docassemble.org"
Documentation = "https://docassemble.org/docs.html"
Repository = "https://github.com/jhpyle/docassemble.git"
"Bug Tracker" = "https://github.com/jhpyle/docassemble/issues"
Changelog = "https://github.com/jhpyle/docassemble/blob/master/CHANGELOG.md"
