[build-system]
requires = ["setuptools==80.9.0"]
build-backend = "setuptools.build_meta"
[project]
name = "docassemble.base"
version = '1.9.1'
description = "The base components of the docassemble system."
readme = "README.md"
authors = [
  {name = "Jonathan Pyle", email = "jhpyle@gmail.com"}
]
license = "MIT"
license-files = ["LICENSE.txt"]
requires-python = ">= 3.9"
dependencies = [
  "3to2==1.1.1",
  "aiohappyeyeballs==2.6.1",
  "aiohttp==3.13.3",
  "aiohttp-retry==2.9.1",
  "aiosignal==1.4.0",
  "alembic==1.17.2",
  "anyio==4.12.0",
  "astunparse==1.6.3",
  "async-timeout==5.0.1",
  "atomicwrites==1.4.1",
  "attrs==25.4.0",
  "azure-common==1.1.28",
  "azure-core==1.38.0",
  "azure-identity==1.25.1",
  "azure-keyvault-secrets==4.10.0",
  "azure-nspkg==3.0.2",
  "azure-storage-blob==12.27.1",
  "babel==2.17.0",
  "backports.tarfile==1.2.0",
  "bcrypt==5.0.0",
  "beautifulsoup4==4.14.3",
  "bleach==6.3.0",
  "blinker==1.9.0",
  "boto==2.49.0",
  "boto3==1.42.17",
  "botocore==1.42.17",
  "cachetools==5.5.2",
  "cairocffi==1.7.1",
  "CairoSVG==2.8.2",
  "certifi==2025.11.12",
  "cffi==2.0.0",
  "chardet==5.2.0",
  "charset-normalizer==3.4.4",
  "click==8.3.1",
  "colorama==0.4.6",
  "commonmark==0.9.1",
  "convertapi==2.0.0",
  "cryptography==46.0.3",
  "cssselect2==0.8.0",
  "defusedxml==0.7.1",
  "Deprecated==1.3.1",
  "deprecation==2.1.0",
  "docassemble-backports==1.0",
  "Docassemble-Pattern==3.6.7",
  "docassemble-textstat==0.7.2",
  "docopt==0.6.2",
  "docutils==0.22.4",
  "docxcompose==1.4.0",
  "docxtpl==0.20.2",
  "et_xmlfile==2.0.0",
  "exceptiongroup==1.3.1",
  "Flask==3.1.2",
  "Flask-Mail==0.10.0",
  "frozenlist==1.8.0",
  "future==1.0.0",
  "geographiclib==2.1",
  "geopy==2.4.1",
  "google-api-core==2.28.1",
  "google-api-python-client==2.187.0",
  "google-auth==2.39.0",
  "google-auth-httplib2==0.3.0",
  "google-auth-oauthlib==1.2.3",
  "google-cloud-core==2.5.0",
  "google-cloud-storage==3.7.0",
  "google-cloud-vision==3.11.0",
  "google-crc32c==1.8.0",
  "google-i18n-address==3.1.1",
  "google-resumable-media==2.8.0",
  "googleapis-common-protos==1.72.0",
  "greenlet==3.3.0",
  "grpcio==1.76.0",
  "grpcio-status==1.76.0",
  "guess_language-spirit==0.5.3",
  "httplib2==0.31.0",
  "Hyphenate==1.1.0",
  "id==1.5.0",
  "idna==3.11",
  "img2pdf==0.6.3",
  "importlib_metadata==8.7.1",
  "importlib_resources==6.5.2",
  "iniconfig==2.3.0",
  "isodate==0.7.2",
  "itsdangerous==2.2.0",
  "jaraco.classes==3.4.0",
  "jaraco.context==6.0.2",
  "jaraco.functools==4.4.0",
  "jdcal==1.4.1",
  "jeepney==0.9.0",
  "jellyfish==1.2.1",
  "Jinja2==3.1.6",
  "jmespath==1.0.1",
  "joblib==1.5.3",
  "keyring==25.7.0",
  "lxml==6.0.2",
  "Mako==1.3.10",
  "Markdown==3.10",
  "markdown-it-py==4.0.0",
  "MarkupSafe==3.0.3",
  "mdurl==0.1.2",
  "more-itertools==10.8.0",
  "msal==1.34.0",
  "msal-extensions==1.3.1",
  "msrest==0.7.1",
  "multidict==6.7.0",
  "namedentities==1.9.4",
  "nh3==0.3.2",
  "nltk==3.9.2",
  "num2words==0.5.14",
  "numpy==2.4.0",
  "oauth2client==4.1.3",
  "oauthlib==3.3.1",
  "openpyxl==3.1.5",
  "ordered-set==4.1.0",
  "packaging==25.0",
  "pandas==2.3.3",
  "pdfminer.six==20251228",
  "phonenumbers==9.0.21",
  "pikepdf==10.1.0",
  "pillow==12.0.0",
  "pkginfo==1.12.1.2",
  "pluggy==1.6.0",
  "ply==3.11",
  "portalocker==3.2.0",
  "propcache==0.4.1",
  "proto-plus==1.27.0",
  "protobuf==6.33.2",
  "pwdlib==0.3.0",
  "pyasn1==0.6.1",
  "pyasn1_modules==0.4.2",
  "pycountry==24.6.1",
  "pycparser==2.23",
  "pycryptodome==3.23.0",
  "pycryptodomex==3.23.0",
  "Pygments==2.19.2",
  "PyJWT==2.10.1",
  "PyLaTeX==1.4.2",
  "pyparsing==3.3.1",
  "pypng==0.20220715.0",
  "pytest==9.0.2",
  "python-dateutil==2.9.0.post0",
  "python-docx==1.2.0",
  "python-editor==1.0.4",
  "pytz==2025.2",
  "pytz-deprecation-shim==0.1.0.post0",
  "PyYAML==6.0.3",
  "pyzbar==0.1.9",
  "qrcode==8.2",
  "readme_renderer==44.0",
  "regex==2025.11.3",
  "reportlab==4.4.7",
  "repoze.lru==0.7",
  "requests==2.32.5",
  "requests-oauthlib==2.0.0",
  "requests-toolbelt==1.0.0",
  "rfc3986==2.0.0",
  "rich==14.2.0",
  "rsa==4.7.2",
  "ruamel.yaml==0.18.17",
  "ruamel.yaml.bytes==0.1.0",
  "ruamel.yaml.clib==0.2.15",
  "ruamel.yaml.string==0.1.1",
  "s3transfer==0.16.0",
  "scipy==1.16.3",
  "SecretStorage==3.5.0",
  "setuptools==80.9.0",
  "six==1.17.0",
  "sniffio==1.3.1",
  "sortedcontainers==2.4.0",
  "soupsieve==2.8.1",
  "SQLAlchemy==2.0.45",
  "tinycss2==1.5.1",
  "titlecase==2.4.1",
  "toml==0.10.2",
  "tomli==2.3.0",
  "tqdm==4.67.1",
  "twilio==9.9.0",
  "twine==6.2.0",
  "typing_extensions==4.15.0",
  "tzdata==2025.3",
  "tzlocal==5.3.1",
  "ua-parser==1.0.1",
  "ua-parser-builtins==0.18.0.post1",
  "uritemplate==4.2.0",
  "urllib3==2.6.3",
  "us==3.2.0",
  "user-agents==2.2.0",
  "wcwidth==0.2.14",
  "webencodings==0.5.1",
  "Werkzeug==3.1.5",
  "wheel==0.45.1",
  "wrapt==2.0.1",
  "xfdfgen==0.4",
  "xlrd==2.0.2",
  "xlsxwriter==3.2.9",
  "xlwt==1.3.0",
  "yarl==1.22.0",
  "zipp==3.23.0"
]
[tool.setuptools.packages.find]
where = ["."]
[project.urls]
Homepage = "https://docassemble.org"
Documentation = "https://docassemble.org/docs.html"
Repository = "https://github.com/jhpyle/docassemble.git"
"Bug Tracker" = "https://github.com/jhpyle/docassemble/issues"
Changelog = "https://github.com/jhpyle/docassemble/blob/master/CHANGELOG.md"
