[build-system]
requires = ["setuptools==82.0.1"]
build-backend = "setuptools.build_meta"
[project]
name = "docassemble.demo"
version = '1.10.1'
description = "A demonstration package for docassemble."
readme = "README.md"
authors = [
  {name = "Jonathan Pyle", email = "jhpyle@gmail.com"}
]
license = "MIT"
license-files = ["LICENSE.txt"]
requires-python = ">= 3.9"
dependencies = [
  'docassemble.base==1.10.1'
#  "ics",
#  "openai",
#  "anthropic",
#  "gspread",
#  "matplotlib"
]
[tool.setuptools.packages.find]
where = ["."]
[project.urls]
Homepage = "https://docassemble.org"
Documentation = "https://docassemble.org/docs.html"
Repository = "https://github.com/jhpyle/docassemble.git"
"Bug Tracker" = "https://github.com/jhpyle/docassemble/issues"
Changelog = "https://github.com/jhpyle/docassemble/blob/master/CHANGELOG.md"
[tool.ruff]
src = ["docassemble_base", "docassemble_webapp", "docassemble_demo"]

[tool.ruff.lint]
ignore = ["E722", "E226", "E24", "E501", "C901", "E305", "E306"]

[tool.pylint.main]
init-hook = """
import sys
sys.path.insert(0, '../docassemble_webapp')
sys.path.insert(0, '../docassemble_base')
sys.path.insert(0, '../docassemble_demo')
"""

[tool.pylint.messages_control]
disable = [
    "attribute-defined-outside-init",
    "bare-except",
    "broad-exception-caught",
    "consider-using-f-string",
    "consider-using-with",
    "eval-used",
    "exec-used",
    "import-outside-toplevel",
    "line-too-long",
    "missing-class-docstring",
    "missing-function-docstring",
    "missing-module-docstring",
    "no-member",
    "raise-missing-from",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-boolean-expressions",
    "too-many-branches",
    "too-many-function-args",
    "too-many-lines",
    "too-many-locals",
    "too-many-nested-blocks",
    "too-many-positional-arguments",
    "too-many-public-methods",
    "too-many-return-statements",
    "too-many-statements",
    "too-many-instance-attributes",
]

[tool.mypy]
disable_error_code = ["var-annotated"]